--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 *{
 	box-sizing: border-box;
 	margin:0;
-	padding:0;
+	/*padding:0;*/
 }
 
+body{
+	
+}
+
+.banner{
+	height: 400px;
+	border:5px solid #000;
+	cursor: pointer;
+}
